# ai-resume-chat

./: .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  docker-compose.yml
.agents/code-reviews/: 2026-01-17-readme-and-cleanup.md
.agents/plans/: ai-resume-implementation.md  phase2-content-enrichment-accuracy.md
.agents/work-sessions/: 2026-01-17-prompt-optimization.md
.claude/: settings.local.json
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: chat.py  contact.py  health.py
backend/app/core/: agent.py  config.py  logging.py  middleware.py
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: AIChat.tsx  ContactForm.tsx  Experience.tsx  ExperienceCard.tsx  FitAssessment.tsx  Footer.tsx  Header.tsx  Hero.tsx
frontend/src/data/: joseph-fajen.ts
frontend/src/pages/: Index.tsx
